--- a/custom/modules/newspapers_core/templates/block--this-day-in-nb-history.html.twig
+++ b/custom/modules/newspapers_core/templates/block--this-day-in-nb-history.html.twig
@@ -1,3 +1,3 @@
-<section class="col-xs-12 col-md-6 details clearfix">
+<section class="details clearfix">
   {{ drupal_view('this_day_in_nb_history','today', history_issue_id) }}
 </section>
