NBNP-280 Fix overflow/bootstrap_barrio issue re: digital page lister

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_import.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_import.scss
@@ -3,6 +3,7 @@
 
 @import "local-variables";
 @import "breadcrumb";
+@import "digital-page-lister";
 @import "facets";
 @import "form";
 @import "pager";
