--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -69,9 +69,9 @@
  */
 #}
 {% if back_link %}
-    <nav class="tabbable">
+    <div class="mb-3">
         {{ back_link }}
-    </nav>
+    </div>
 {% endif %}
 
 {% if view_mode == 'featured' %}
