NBNP-280 Owl Carousel style updates

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_import.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_import.scss
@@ -6,6 +6,7 @@
 @import "digital-page-lister";
 @import "facets";
 @import "form";
+@import "owl-carousel";
 @import "pager";
 @import "sidebar";
 @import "table";
