NBNP-280 Move owl carousel to import, purge redundant rules

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_owl-carousel.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_owl-carousel.scss
@@ -98,3 +98,10 @@
     }
   }
 }
+
+@media (min-width: 992px) {
+  // Single issue responsive grouping txt fix
+  .owl-carousel .owl-wrapper {
+    min-width: 870px !important;
+  }
+}
