NBNP-280 Update sidebar facet range widget padding

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_facets.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_facets.scss
@@ -40,8 +40,8 @@
 .facet-slider {
   margin: 3em 1em 0 1.15em;
 }
-.block-facet--range-slider {
-  padding-bottom: 1.35em;
+.sidebar .block.block-facet--range-slider {
+  padding-bottom: 1rem;
 }
 .ui-slider-pip-first .ui-slider-label:hover,
 .ui-slider-pip-last .ui-slider-label:hover {
