NBNP-280 Autocomplete input adjustments

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_form.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_form.scss
@@ -10,3 +10,9 @@
     }
   }
 }
+
+.js input.form-autocomplete,
+.js input.form-autocomplete.ui-autocomplete-loading {
+  background-position: 99% center;
+  padding-right: 1.2rem;
+}
