NBNP-280 Reduce front page featured padding

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -83,7 +83,7 @@
         <img class="no-borders image-placeholder" src="/{{ active_theme_path() }}/src/img/sample-publication.jpg" alt="" />
     {% endif %}
     </div>
-    <div class="col">
+    <div class="col pl-0">
         <h2>Featured Publication</h2>
         <div class="title"><strong><a href="{{ url }}">{{ label }}</a></strong></div>
         {% if content.field_place_of_publication|field_value %}
