NBNP-280 Enable back-to-top module, add custom config + SASS override

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_import.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_import.scss
@@ -8,6 +8,7 @@
 @import "form";
 @import "owl-carousel";
 @import "pager";
+@import "scrollup";
 @import "sidebar";
 @import "table";
 @import "ui-autocomplete";
