NBNP-280 Adjust h2 styles re: footer/facet context

--- a/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
+++ b/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
@@ -64,6 +64,8 @@ div[data-drupal-selector="edit-actions"] .btn-unb-red:hover {
 }
 #footer-top h2 {
     color: #333;
+    font-family: 'ProximaNovaA-SemiBold','Century Gothic',AppleGothic,Arial,sans-serif;
+    font-weight: normal;
 }
 #footer-top > div {
     width: 100%;
