--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_facets.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_facets.scss
@@ -2,6 +2,9 @@
 .facets-widget-checkbox {
   h3 {
     background: $heading-bg;
+    font-family: 'ProximaNovaA-SemiBold','Century Gothic',AppleGothic,Arial,sans-serif;
+    font-size: 1.1rem;
+    font-weight: normal;
     padding: .4rem .35rem;
   }
 }
