NBNP-314 Add dependency, integrate admin view CSS override

--- a/custom/modules/newspapers_core/css/claro-admin-overrides.css
+++ b/custom/modules/newspapers_core/css/claro-admin-overrides.css
@@ -4,3 +4,9 @@
 .claro-details > .claro-details__summary:hover {
     background: #edfdf6;
 }
+
+.feed-icons .views-data-export-feed .feed-icon {
+    background-size: cover;
+    width: 72px;
+    height: 28px;
+}
