NBNP-280 Add Admin theme > Preview > Back link > hover exception

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -8,8 +8,8 @@ figcaption {
   margin-bottom: 1em;
 }
 
-a:not(.btn):not(.button):not(.cd-top):not(.nav-link):focus,
-a:not(.btn):not(.button):not(.cd-top):not(.nav-link):hover,
+a:not(.btn):not(.button):not(.cd-top):not(.nav-link):not(.node-preview-backlink):focus,
+a:not(.btn):not(.button):not(.cd-top):not(.nav-link):not(.node-preview-backlink):hover,
 a:not(.btn):not(.button):not(.cd-top):not(.nav-link):active {
   border-bottom-style: none;
   text-decoration: underline;
