--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_form.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_form.scss
@@ -34,3 +34,9 @@
 input[type="submit"].form-control {
   width: inherit;
 }
+
+// Serial holding form-inspired rules.
+.field--widget-options-buttons fieldset legend {
+    font-size: 1rem;
+    font-weight: bold;
+}
