NBNP-280 Increase Custom Control radio indicator size + center

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_form.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_form.scss
@@ -74,7 +74,8 @@ div[required="required"] > fieldset {
 .custom-radio {
   label.form-required {
     &:after {
-      margin: 4px 3px;
+      background-size: 10px;
+      width: 8px;
     }
   }
 }
