--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -295,8 +295,32 @@
                                     <dl class="holding-item">
                                         {% for field in item %}
                                             {% if field.value %}
-                                                <dt>{{ field.label }}:</dt>
-                                                <dd>{{ field.value|raw }}</dd>
+                                                {% if field.label == missing_coverage_label %}
+                                                    {# Coverage Statement is required+lighter weight so this should display below it #}
+                                                    <dd>
+                                                        <button type="button" class="btn btn-link p-0" data-toggle="modal" data-target="#missingMicroform{{ count }}">
+                                                            <span class="fas fa-tasks mr-1"></span>{{ missing_coverage_label }}
+                                                        </button>
+                                                        <div class="modal fade" id="missingMicroform{{ count }}" tabindex="-1" aria-labelledby="microform{{ count }}ModalLabel" aria-hidden="true">
+                                                            <div class="modal-dialog modal-xl">
+                                                                <div class="modal-content">
+                                                                    <div class="modal-header">
+                                                                        <div class="modal-title h3" id="microform{{ count }}ModalLabel">{{ field.label }}</div>
+                                                                        <button type="button" class="btn btn-primary" data-dismiss="modal" aria-label="Close">
+                                                                            <span class="fas fa-window-close mr-1" aria-hidden="true"></span>Close
+                                                                        </button>
+                                                                    </div>
+                                                                    <div class="modal-body">
+                                                                        {{ field.value|raw }}
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </dd>
+                                                {% else %}
+                                                    <dt>{{ field.label }}:</dt>
+                                                    <dd>{{ field.value|raw }}</dd>
+                                                {% endif %}
                                             {% endif %}
                                         {% endfor %}
                                     </dl>
