NBNP-346 Tweak custom checkbox vertical alignment re: UNB font

--- a/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
+++ b/custom/modules/newspapers_core/css/newspapers_core.tab_search.css
@@ -65,6 +65,7 @@ div[data-drupal-selector="edit-actions"] .btn-unb-red:hover {
 #edit-search-scope .custom-checkbox .custom-control-label::before,
 #edit-search-scope .custom-checkbox .custom-control-label::after {
     left: -1.33rem;
+    top: .15rem;
 }
 
 #footer-top h2 {
