NBNP-331 Change aside main heading to 'Holdings'

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -290,7 +290,7 @@
         <aside class="col-sm-4 publication">
             {% set missing_coverage_label = 'Missing Coverage' %}
             <div class="title-holdings">
-                <h2 class="bg-unb-light border p-2">{% trans %}UNB Libraries' Holdings{% endtrans %}</h2>
+                <h2 class="bg-unb-light border p-2">{% trans %}Holdings{% endtrans %}</h2>
                 {% if holding|length > 0 %}
 
                     {% if holding.online|length > 0 %}
